--- a/mbot/style.css
+++ b/mbot/style.css
@@ -12,15 +12,7 @@
 }
 
 .mbot {
-    padding-top: 50px;
-}
-
-.test {
-    padding-top: 10px;
-}
-
-.test2 {
-    padding-top: 15px;
+    padding-top: 20px;
 }
 
 .article-text {
@@ -28,55 +20,13 @@
     font-size: 15px;
 }
 
-#navigation {
-    padding-left: 50px;
-    padding-top: 0px;
-}
-
 #body {
     padding-top: 50px;
     background-color: aliceblue;
 }
 
-#bootstrap {
-    color: cornflowerblue;;
-    position: relative;
-    top: 370px;
-    right: 125px;
-}
-
-.resources {
-    position: relative;
-    top: 250px;
-}
-
-#site-title {
-    color: dimgray;
-}
-
 #buttons {
     padding-top: 50px;
-}
-
-#usage-reg {
-    font-size: 16px;
-}
-
-#maven-header {
-    font-size: 20px;
-    font-weight:600;
-    position: absolute;
-    right: 500px;
-    left: 450px;
-    top: 230px;
-}
-
-.maven {
-    font-family: "Courier New";
-    position: absolute;
-    right: 470px;
-    left: 470px;
-    top: 259px;
 }
 
 #code {
@@ -87,9 +37,8 @@
     border-color: black;
 }
 
-.discord {
+.invite {
     position: relative;
-    bottom: 350px;
-    right: 100px;
-    
+    padding-top: 20px;
+    padding-left: 1100px;
 }
